--- a/SumDU/Base.lproj/MainStoryboard.storyboard
+++ b/SumDU/Base.lproj/MainStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3rK-8X-GqU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3rK-8X-GqU">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
@@ -31,7 +31,7 @@
                                     <constraint firstAttribute="width" constant="320" id="LMO-NG-PhF"/>
                                 </constraints>
                                 <connections>
-                                    <segue destination="rWU-h3-QzD" kind="embed" id="DJm-zB-G4b"/>
+                                    <segue destination="3rK-8X-GqU" kind="embed" id="v0s-Ug-1Vv"/>
                                 </connections>
                             </containerView>
                         </subviews>
@@ -383,7 +383,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="DJm-zB-G4b"/>
         <segue reference="nzR-sD-HRn"/>
     </inferredMetricsTieBreakers>
 </document>
