--- a/SumDU/Base.lproj/MainStoryboard.storyboard
+++ b/SumDU/Base.lproj/MainStoryboard.storyboard
@@ -22,7 +22,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ulp-OY-u2i">
                                 <rect key="frame" x="320" y="0.0" width="280" height="600"/>
                                 <connections>
-                                    <segue destination="GcZ-4f-J3p" kind="embed" id="nzR-sD-HRn"/>
+                                    <segue destination="5ds-cl-2FM" kind="embed" identifier="ScheduleSegue" id="wdV-pV-BkP"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kHO-0L-t4x">
@@ -31,19 +31,36 @@
                                     <constraint firstAttribute="width" constant="320" id="LMO-NG-PhF"/>
                                 </constraints>
                                 <connections>
-                                    <segue destination="3rK-8X-GqU" kind="embed" id="v0s-Ug-1Vv"/>
+                                    <segue destination="3rK-8X-GqU" kind="embed" identifier="searchSegue" id="v0s-Ug-1Vv"/>
                                 </connections>
                             </containerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QNf-Dc-fKD">
+                                <rect key="frame" x="320" y="64" width="3" height="536"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="3" id="7JQ-OD-0mT"/>
+                                    <constraint firstAttribute="height" constant="600" id="8V6-BT-xJu"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="3" id="ujg-ao-A8n"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="8V6-BT-xJu"/>
+                                    </mask>
+                                </variation>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="QNf-Dc-fKD" firstAttribute="leading" secondItem="kHO-0L-t4x" secondAttribute="trailing" id="0CA-va-uCd"/>
                             <constraint firstAttribute="trailing" secondItem="ulp-OY-u2i" secondAttribute="trailing" id="6Z3-aF-0qL"/>
+                            <constraint firstItem="QNf-Dc-fKD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="64" id="AWx-Mb-2KN"/>
                             <constraint firstItem="ulp-OY-u2i" firstAttribute="leading" secondItem="kHO-0L-t4x" secondAttribute="trailing" id="IGA-D7-eGJ"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ulp-OY-u2i" secondAttribute="bottom" id="J7O-DV-0OV"/>
                             <constraint firstItem="ulp-OY-u2i" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="KlZ-lZ-mqF"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kHO-0L-t4x" secondAttribute="bottom" id="RsO-KI-ZJT"/>
                             <constraint firstItem="kHO-0L-t4x" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="WNa-N9-bi8"/>
                             <constraint firstItem="kHO-0L-t4x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sly-Tn-FcB"/>
+                            <constraint firstItem="QNf-Dc-fKD" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottomMargin" id="w8J-yq-kaa"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -178,10 +195,26 @@
             </objects>
             <point key="canvasLocation" x="-260" y="1176"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JuM-n8-z5B">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vcq-zL-bk7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="5ds-cl-2FM" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yx4-75-v3P">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="GcZ-4f-J3p" kind="relationship" relationship="rootViewController" id="4Xl-k9-pHX"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="741" y="455"/>
+        </scene>
         <!--Schedule-->
         <scene sceneID="XbM-Rf-DsK">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="GcZ-4f-J3p" customClass="ScheduleViewController" customModule="SumDU" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="scheduleVC" automaticallyAdjustsScrollViewInsets="NO" id="GcZ-4f-J3p" customClass="ScheduleViewController" customModule="SumDU" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9Fx-WE-fAx"/>
                         <viewControllerLayoutGuide type="bottom" id="jmn-RX-PbZ"/>
@@ -190,7 +223,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="280" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="107" sectionHeaderHeight="25" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PwZ-WB-DNo">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="107" sectionHeaderHeight="25" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PwZ-WB-DNo">
                                 <rect key="frame" x="0.0" y="64" width="280" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -198,7 +231,7 @@
                                         <rect key="frame" x="0.0" y="25" width="280" height="107"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="O3O-9a-INX" id="Z5o-Bf-P7z">
-                                            <rect key="frame" x="0.0" y="0.0" width="280" height="107"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="280" height="106.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Pair Time Label" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OIH-JI-fXT">
@@ -383,6 +416,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="nzR-sD-HRn"/>
+        <segue reference="4Xl-k9-pHX"/>
     </inferredMetricsTieBreakers>
 </document>
