--- a/SumDU/Base.lproj/MainStoryboard.storyboard
+++ b/SumDU/Base.lproj/MainStoryboard.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ulp-OY-u2i">
-                                <rect key="frame" x="320" y="0.0" width="280" height="600"/>
+                                <rect key="frame" x="321" y="0.0" width="279" height="600"/>
                                 <connections>
                                     <segue destination="5ds-cl-2FM" kind="embed" identifier="ScheduleSegue" id="wdV-pV-BkP"/>
                                 </connections>
@@ -28,39 +28,32 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kHO-0L-t4x">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="600"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="320" id="LMO-NG-PhF"/>
+                                    <constraint firstAttribute="width" constant="320" id="eIz-xo-WBk"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="3rK-8X-GqU" kind="embed" identifier="searchSegue" id="v0s-Ug-1Vv"/>
                                 </connections>
                             </containerView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QNf-Dc-fKD">
-                                <rect key="frame" x="320" y="64" width="3" height="536"/>
+                                <rect key="frame" x="320" y="0.0" width="1" height="600"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="3" id="7JQ-OD-0mT"/>
-                                    <constraint firstAttribute="height" constant="600" id="8V6-BT-xJu"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="3" id="ujg-ao-A8n"/>
+                                    <constraint firstAttribute="width" constant="1" id="wg7-tH-c4j"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="8V6-BT-xJu"/>
-                                    </mask>
-                                </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="QNf-Dc-fKD" firstAttribute="leading" secondItem="kHO-0L-t4x" secondAttribute="trailing" id="0CA-va-uCd"/>
-                            <constraint firstAttribute="trailing" secondItem="ulp-OY-u2i" secondAttribute="trailing" id="6Z3-aF-0qL"/>
-                            <constraint firstItem="QNf-Dc-fKD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="64" id="AWx-Mb-2KN"/>
-                            <constraint firstItem="ulp-OY-u2i" firstAttribute="leading" secondItem="kHO-0L-t4x" secondAttribute="trailing" id="IGA-D7-eGJ"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ulp-OY-u2i" secondAttribute="bottom" id="J7O-DV-0OV"/>
-                            <constraint firstItem="ulp-OY-u2i" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="KlZ-lZ-mqF"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kHO-0L-t4x" secondAttribute="bottom" id="RsO-KI-ZJT"/>
-                            <constraint firstItem="kHO-0L-t4x" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="WNa-N9-bi8"/>
-                            <constraint firstItem="kHO-0L-t4x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sly-Tn-FcB"/>
-                            <constraint firstItem="QNf-Dc-fKD" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottomMargin" id="w8J-yq-kaa"/>
+                            <constraint firstAttribute="bottom" secondItem="QNf-Dc-fKD" secondAttribute="bottom" id="1Hl-SW-w7T"/>
+                            <constraint firstItem="kHO-0L-t4x" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="5E5-vz-Xsv"/>
+                            <constraint firstItem="QNf-Dc-fKD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="5i3-U8-fgB"/>
+                            <constraint firstItem="ulp-OY-u2i" firstAttribute="leading" secondItem="QNf-Dc-fKD" secondAttribute="trailing" id="7Sd-RO-Xpb"/>
+                            <constraint firstItem="QNf-Dc-fKD" firstAttribute="leading" secondItem="kHO-0L-t4x" secondAttribute="trailing" id="7sg-cS-xQ9"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ulp-OY-u2i" secondAttribute="bottom" id="AA0-CW-PBF"/>
+                            <constraint firstItem="ulp-OY-u2i" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ojb-fI-uP9"/>
+                            <constraint firstAttribute="trailing" secondItem="ulp-OY-u2i" secondAttribute="trailing" id="fYd-p6-XSe"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kHO-0L-t4x" secondAttribute="bottom" id="yR7-a5-128"/>
+                            <constraint firstItem="kHO-0L-t4x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yfj-1T-xJE"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -96,16 +89,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zYR-O0-G46">
-                                <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="zYR-O0-G46">
+                                <rect key="frame" x="0.0" y="44" width="320" height="44"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="widthClass=compact" layoutMarginsFollowReadableWidth="YES" preservesSuperviewLayoutMargins="YES"/>
                                 <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
                                     <rect key="frame" x="0.0" y="0.0" width="400" height="44"/>
                                 </variation>
                             </searchBar>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Jgf-z8-fQo">
-                                <rect key="frame" x="5" y="113" width="310" height="29"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Jgf-z8-fQo">
+                                <rect key="frame" x="5" y="93" width="310" height="29"/>
                                 <segments>
                                     <segment title="Teacher"/>
                                     <segment title="Group"/>
@@ -120,8 +113,8 @@
                                     <action selector="selectionDidChange:" destination="rWU-h3-QzD" eventType="valueChanged" id="Shp-v9-EZV"/>
                                 </connections>
                             </segmentedControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="i2R-RE-hU6">
-                                <rect key="frame" x="0.0" y="146" width="320" height="454"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="i2R-RE-hU6">
+                                <rect key="frame" x="0.0" y="126" width="320" height="474"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
                                     <rect key="frame" x="0.0" y="82" width="400" height="718"/>
@@ -140,21 +133,11 @@
                             <constraint firstAttribute="trailing" secondItem="zYR-O0-G46" secondAttribute="trailing" id="DTS-VG-Iih"/>
                             <constraint firstItem="i2R-RE-hU6" firstAttribute="leading" secondItem="GTx-xS-acF" secondAttribute="leading" id="LMv-N1-Y8Y"/>
                             <constraint firstItem="TS0-jA-hlX" firstAttribute="top" secondItem="i2R-RE-hU6" secondAttribute="bottom" id="MPm-MT-Wam"/>
-                            <constraint firstItem="zYR-O0-G46" firstAttribute="centerX" secondItem="GTx-xS-acF" secondAttribute="centerX" id="cXn-3k-AHl"/>
                             <constraint firstItem="zYR-O0-G46" firstAttribute="top" secondItem="FTG-NP-OPg" secondAttribute="bottom" id="dLY-80-5Db"/>
                             <constraint firstItem="i2R-RE-hU6" firstAttribute="top" secondItem="Jgf-z8-fQo" secondAttribute="bottom" constant="5" id="jLH-VJ-ECc"/>
-                            <constraint firstItem="i2R-RE-hU6" firstAttribute="centerX" secondItem="GTx-xS-acF" secondAttribute="centerX" id="ntA-U6-TCw"/>
-                            <constraint firstItem="Jgf-z8-fQo" firstAttribute="centerX" secondItem="GTx-xS-acF" secondAttribute="centerX" id="sug-kY-DgV"/>
                             <constraint firstItem="zYR-O0-G46" firstAttribute="leading" secondItem="GTx-xS-acF" secondAttribute="leading" id="sx1-5e-gnc"/>
                             <constraint firstAttribute="trailing" secondItem="i2R-RE-hU6" secondAttribute="trailing" id="xPT-Mb-hTE"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="cXn-3k-AHl"/>
-                                <exclude reference="sug-kY-DgV"/>
-                                <exclude reference="ntA-U6-TCw"/>
-                            </mask>
-                        </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="zYR-O0-G46"/>
@@ -198,7 +181,6 @@
         <!--Navigation Controller-->
         <scene sceneID="JuM-n8-z5B">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Vcq-zL-bk7" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="5ds-cl-2FM" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="yx4-75-v3P">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -208,6 +190,7 @@
                         <segue destination="GcZ-4f-J3p" kind="relationship" relationship="rootViewController" id="4Xl-k9-pHX"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vcq-zL-bk7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="741" y="455"/>
         </scene>
@@ -220,22 +203,22 @@
                         <viewControllerLayoutGuide type="bottom" id="jmn-RX-PbZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="iT8-WB-SuS">
-                        <rect key="frame" x="0.0" y="0.0" width="280" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="107" sectionHeaderHeight="25" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PwZ-WB-DNo">
-                                <rect key="frame" x="0.0" y="64" width="280" height="536"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="107" sectionHeaderHeight="25" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PwZ-WB-DNo">
+                                <rect key="frame" x="0.0" y="44" width="320" height="556"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kCellReuseIdentifierSchedule" rowHeight="107" id="O3O-9a-INX" customClass="ScheduleCell" customModule="SumDU" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="25" width="280" height="107"/>
+                                        <rect key="frame" x="0.0" y="25" width="320" height="107"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="O3O-9a-INX" id="Z5o-Bf-P7z">
-                                            <rect key="frame" x="0.0" y="0.0" width="280" height="106.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="106.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Pair Time Label" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OIH-JI-fXT">
-                                                    <rect key="frame" x="8" y="79" width="98" height="17"/>
+                                                    <rect key="frame" x="8" y="79" width="97.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -416,6 +399,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="4Xl-k9-pHX"/>
+        <segue reference="z0d-BM-zds"/>
     </inferredMetricsTieBreakers>
 </document>
